# axiom-recorder

./: .cirrus.yml  .gitignore  Cargo.toml  README.md  capture_calibrated.yml  config.yaml  darkframe.yml  flame-graph.html  nohup.out  paused.conf  row_noise_mean_model.yml  rustfmt.toml  ryan-dcp.yml  ryan_process_raw32.yml  shell.nix
.github/workflows/: build.yml
bitdepth_convert/: Cargo.toml
bitdepth_convert/src/: lib.rs
layout/: Cargo.toml
layout/src/: basic.rs  main.rs  types.rs
layout/src/flex/: column.rs  mod.rs
narui/src/vulkano_render/: mod.rs
narui_derive/: Cargo.toml
narui_derive/src/: lib.rs  rsx.rs  rsx_macro.rs  widget.rs  widget_macro.rs
res/fonts/: DejaVuFontsLicense.html
row_noise_test/: 000017.dng.xmp  dark_removed.dng.xmp  generate_row_noise_removal_model.py  good_model.yml  raw_io.py  row_noise.dng.xmp  row_noise_2.dng.xmp  row_noise_3.dng.xmp  row_noise_5.dng.xmp  row_noise_correct.yml  row_noise_green_diff_model.yml  row_noise_mean_model.yml  test.py
src/: lib.rs  main.rs  nodes.rs  preview.rs  recorder.glade  settings.rs  video_source.rs  writer.rs
src/common/: fps_report.rs  mod.rs
src/debayer/: debayerer.rs  gpu_util.rs  linear_debayer.glsl  mod.rs  resolution_loss.glsl  shader_builder.rs
src/debayer/shader/: debayer_beta_linearinterpolate.glsl  debayer_beta_linearinterpolate_quick.glsl  debayer_halfresolution.frag  debayer_halfresolution.glsl  debayer_halfresolution_real.glsl  debayer_linearinterpolate.glsl  source_beta.glsl  source_lin.glsl  source_log.glsl
src/frame/: bit_depth_converter.rs  buffer.rs  mod.rs  raw_frame.rs  rgb_frame.rs  rgba_frame.rs  typing_hacks.rs
src/gpu/: bitdepth_convert.rs  bitdepth_convert_12_8.glsl  debayer.glsl  debayer.rs  display.rs  gpu_util.rs  mod.rs
src/graph_processing/: mod.rs  parametrizable.rs  processing_node.rs
src/graphical/: debayer.rs  gl_util.rs  mod.rs  scale.frag  settings.rs  ui_lib.rs
src/graphical/ui_lib/: basic_components.rs  container_components.rs  debayer.frag  debayer.rs  debayer_component.rs  gl_util.rs  headless_util.rs  histogram_components.rs  layout_components.rs  list_components.rs  mod.rs  text.rs  text_components.rs  util.rs
src/gui/: image.rs
src/nodes_cpu/: average.rs  benchmark_sink.rs  bitdepth_convert.rs  dual_frame_raw_decoder.rs  fp_to_uint.rs  mod.rs  rgb_to_rgba.rs  row_noise_removal.rs  sz3.rs  zstd.rs
src/nodes_cpu/row_noise_removal/: generate_model.py  good.yml  mean.yml  mod.rs  only_dark.yml  only_green.yml
src/nodes_gpu/: base_gpu_node.rs  bitdepth_convert.rs  bitdepth_convert_12_8.glsl  calibrate.glsl  calibrate.rs  color_voodoo.glsl  color_voodoo.rs  darkframe_subtract.glsl  darkframe_subtract.rs  debayer.glsl  debayer.rs  debayer_loss.glsl  debayer_resolution_loss.rs  display.rs  histogram.glsl  histogram.rs  lut_3d.glsl  lut_3d.rs  mod.rs  plot.rs  shader_util.rs  waveform.glsl  waveform.rs
src/nodes_io/: base_ifd.yml  default_dcp.yml  frameserver_cinema_dng.rs  mod.rs  reader_cinema_dng.rs  reader_raw.rs  reader_tcp.rs  reader_usb3.rs  reader_webcam.rs  writer_cinema_dng.rs  writer_ffmpeg.rs  writer_gstreamer.rs  writer_raw.rs
src/nodes_util/: cache.rs  mod.rs  null_source.rs  split.rs
src/pipeline_processing/: buffers.rs  execute.rs  frame.rs  gpu_util.rs  mod.rs  node.rs  parametrizable.rs  payload.rs  prioritized_executor.rs  processing_context.rs  processing_graph.rs  processing_node.rs  puller.rs
src/pipeline_processing_legacy/: execute.rs  mod.rs  prioritized_reactor.rs  processing_node.rs
src/raw_video_io/: mod.rs  raw_frame.rs  reader_raw.rs  reader_tcp.rs  reader_usb3.rs  writer_cinema_dng.rs  writer_raw_n.rs
src/shader/: debayer.frag
src/util/: async_notifier.rs  error.rs  formatting_helpers.rs  fps_report.rs  image.rs  mod.rs  options.rs
src/video_io/: debayer.rs  dng.rs  mod.rs  reader_raw.rs  reader_tcp.rs  reader_usb3.rs  source.rs  writer.rs  writer_cinema_dng.rs  writer_ffmpeg.rs  writer_gstreamer.rs  writer_raw.rs  writer_raw_n.rs
