[package]
name = "recorder"
version = "0.1.0"
authors = ["Jaro <jarohabiger@googlemail.com>"]
repository = "https://github.com/axiom-micro/recorder"
readme = "README.md"
license = "GPL-3.0"
edition = "2021"

[features]
default = []
dhat-heap = ["dhat"]
track-drop = ["backtrace"]

[dependencies]
clap = { version = "3.1.18", features = ["default", "derive"] }
indicatif = "0.17.0"
tiff-encoder = "0.3.2"
glob = "0.3.0"
anyhow = "1.0.57"
itertools = "0.10.3"
bytemuck = "1.9.1"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-win = "0.30.0"
owning_ref = "0.4.1"
shlex = "1.1.0"
winit = "0.26.1"
async-trait = "0.1.56"
futures = "0.3.21"
async-task = "4.2.0"
derivative = "2.2.0"
num_cpus = "1.13.1"
dhat = { version = "0.3.0", optional = true }
backtrace = { version = "0.3.65", optional = true }
serde = { version = "1.0.137", features = ["std", "derive"] }
serde_yaml = "0.9.10"
flume = "0.10.12"
tokio = { version = "1.19.2", features = ["full"] }
console-subscriber = "0.1.6"
sz3 = { git = "https://github.com/apertus-open-source-cinema/sz3-rs" }
zstd = "0.11.2"
handlebars = "4.3.0"
thiserror = "1.0.31"
narui = { git = "https://github.com/apertus-open-source-cinema/narui" }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.13.0"
v4l2-sys-mit = "0.2.0"

[profile.release]
debug = 2
lto = "thin"
# panic = "abort"
